--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="input-container">
         <h1>Grocery List</h1>
         <input type="text" id="item" placeholder="item">
-        <input type="text" id="price" placeholder="item">
+        <input type="text" id="price" placeholder="price">
         <input type="button" id="add-item" placeholder="item" value="Add Item">
     </div>
 
@@ -27,6 +27,10 @@
             <th>Price</th>
         </tr>
     </table>
+
+    <h3>Grand Total:
+        <span id="grandtotal">0</span>
+    </h3>
 </body>
 
 </html>
